SettingsActivity + TODO: fix FB logout!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,48 +1,53 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
+    <!--APP-->
     <string name="app_name">Go4Lunch</string>
+    <string name="app_logo">app_logo</string>
 
     <!-- BOTTOM NAVIGATION VIEW TABS -->
-    <string name="map_view_tab">Map View</string>
-    <string name="list_view_tab">List View</string>
-    <string name="workmates_tab">Workmates</string>
+    <string name="map_view_tab" translatable="false">Carte</string>
+    <string name="list_view_tab" translatable="false">Liste</string>
+    <string name="workmates_tab" translatable="false">Collègues</string>
 
     <!-- BOTTOM NAVIGATION VIEW -->
-    <string name="your_lunch">YOUR LUNCH</string>
-    <string name="settings">SETTINGS</string>
-    <string name="logout">LOGOUT</string>
+    <string name="your_lunch" translatable="false">VOTRE DEJEUNER</string>
+    <string name="settings" translatable="false">PARAMETRES</string>
+    <string name="logout" translatable="false">DECONNEXION</string>
 
     <!--NAVIGATION DRAWER-->
-    <string name="nav_drawer_open">Open Navigation Drawer</string>
-    <string name="nav_drawer_close">Close Navigation Drawer</string>
+    <string name="nav_drawer_open" translatable="false">Open Navigation Drawer</string>
+    <string name="nav_drawer_close" translatable="false">Close Navigation Drawer</string>
 
 
     <!-- NAVIGATION HEADER -->
-    <string name="navigation_header_user_name">Name</string>
-    <string name="navigation_header_user_email">Email</string>
+    <string name="navigation_header_user_name" translatable="false">Nom</string>
+    <string name="navigation_header_user_email" translatable="false">Email</string>
 
     <!--LOGIN ACTIVITY-->
-    <string name="login_activity_catchphrase">Find a nice restaurant and invite your co-workers for lunch!</string>
-    <string name="sign_in_google">Sign in with Google</string>
-    <string name="sign_in_facebook">Sign in with Facebook</string>
-    <string name="connection_succeed">Connexion réussie !</string>
+    <string name="login_activity_catchphrase">Trouvez un bon restaurant et invitez vos collègues à déjeuner !</string>
+    <string name="sign_in_google">Connexion avec Google</string>
+    <string name="sign_in_facebook">Connexion avec Facebook</string>
+    <string name="login_succeeded">Connexion réussie !</string>
     <string name="error_authentication_canceled">L\'authentification a été annulée</string>
     <string name="error_no_internet">Pas de connexion internet</string>
     <string name="error_unknown_error">Erreur inconnue</string>
 
     <!--FACEBOOK-->
     <string name="facebook_application_id" translatable="false">385999599513198</string>
-    <string name="fb_login_protocol_scheme" translatable="false">fb385999599513198</string>
-
+    <string name="facebook_app_id">385999599513198</string>
+    <string name="fb_login_protocol_scheme">fb385999599513198</string>
 
     <!--TWITTER-->
     <string name="twitter_consumer_key" translatable="false">rvVbi56118erPbKlrwVhFziol</string>
-    <string name="sign_in_twitter">Sign in with Twitter</string>
-    <string name="sign_in_email">Sign in with email</string>
+    <string name="sign_in_twitter">Connexion avec Twitter</string>
     <string name="twitter_auth_provider">twitter.com</string>
 
+    <!--EMAIL-->
+    <string name="sign_in_email">Sign in with email</string>
 
-    <string name="auth_msg_sign_in_to_continue">Please sign in to continue.</string>
     <string name="error_fail_auth">\"Echec de l\'authentification \"</string>
-    <string name="app_logo">app_logo</string>
+
+    <string name="settings_title">Paramètres</string>
+    <string name="activate_notifications_asked">Activer les notifications</string>
+    <string name="change_the_app_language">Changer la langue de l\'application (FR/ENG)</string>
 
 </resources>
